--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -37,3 +37,16 @@ input, textarea {
 .slide-fade-leave-to {
   transform: translateY(-100%);
 }
+
+.slide-fade-down-enter-active {
+  transition: all 0.2s ease-out;
+}
+
+.slide-fade-down-leave-active {
+  transition: all 0.2s cubic-bezier(1, 0.5, 0.8, 1);
+}
+
+.slide-fade-down-enter-from,
+.slide-fade-down-leave-to {
+  transform: translateY(100%);
+}
